--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "ross jameson",
   "license": "ISC",
   "dependencies": {
+    "aos": "^2.3.4",
     "express": "^4.17.1",
     "nodemon": "^1.19.4"
   },
